# blobserver

./: .gitignore  AUTHORS  Doxyfile.in  Makefile.am  NEWS  README  autogen.sh  blobserver.pc.in  configure.ac  lcms.pc
data/: bgsubtraction.xml  config.xml  depth.xml  face.xml  fiducial.xml  gige.xml  glsl.xml  hdri.xml  hog.xml  ir.xml  meanOutliers.xml  mirrorball.xml  pcl.xml  pcl_arm.xml  pcl_cluster.xml  python.xml  sample.py  shmdata.xml  stitch.xml  test.xml
data/shaders/: glsl.frag  test.frag  test.vert
ext/: Makefile.am
ext/libfidtrack/: Makefile.am
include/: abstract-factory.h  abstract-factory_spec.h  actuator.h  actuator_armpcl.h  actuator_bgsubtractor.h  actuator_clusterPcl.h  actuator_depthtouch.h  actuator_fiducialtracker.h  actuator_hog.h  actuator_lightSpots.h  actuator_meanOutliers.h  actuator_nop.h  actuator_objOnAPlane.h  actuator_stitch.h  base_objects.h  blob.h  blob_2D.h  blob_2D_color.h  blobserver.h  capture.h  capture_pcl.h  configurator.h  constants.h  creator.h  descriptor_hog.h  detector.h  detector_bgsubtractor.h  detector_depthtouch.h  detector_hog.h  detector_lightSpots.h  detector_meanOutliers.h  detector_nop.h  detector_objOnAPlane.h  detector_stitch.h  hdribuilder.h  helpers.h  mainpage.h  shmpointcloud.h  source.h  source_2d.h  (+8 more)
man/: Makefile.am  man-blobserver.h2m  protocol.msc
pkgconfig/: Makefile.am  flann.pc  pcl_io-1.7.pc  pcl_segmentation-1.7.pc  pcl_visualization-1.7.pc
plugins/: Makefile.am
plugins/actuators/: Makefile.am  armpcl.cpp  armpcl.h  bgsubtractor.cpp  bgsubtractor.h  clusterPcl.cpp  clusterPcl.h  depthtouch.cpp  depthtouch.h  face.cpp  face.h  fiducialtracker.cpp  fiducialtracker.h  glsl.cpp  glsl.h  hog.cpp  hog.h  lightSpots.cpp  lightSpots.h  meanOutliers.cpp  meanOutliers.h  mirrorball.cpp  mirrorball.h  nop.cpp  nop.h  objOnAPlane.cpp  objOnAPlane.h  python.cpp  python.h  stitch.cpp  stitch.h
plugins/actuators/nop/: Makefile.am  actuator_nop.cpp
plugins/data/: Makefile.am
src/: Makefile.am  abstract-factory.h  actuator.cpp  actuator_armpcl.cpp  actuator_bgsubtractor.cpp  actuator_clusterPcl.cpp  actuator_depthtouch.cpp  actuator_fiducialtracker.cpp  actuator_hog.cpp  actuator_lightSpots.cpp  actuator_meanOutliers.cpp  actuator_nop.cpp  actuator_objOnAPlane.cpp  actuator_stitch.cpp  base_objects.cpp  base_objects.h  blob.cpp  blob.h  blob_2D.cpp  blob_2D.h  blob_2D_color.cpp  blob_lightSpot.cpp  blob_lightSpot.h  blob_singleBlob.cpp  blob_singleBlob.h  blobcontroller.cpp  blobcrop.cpp  blobserver.cpp  blobtrainer.cpp  configurator.cpp  configurator.h  creator.h  descriptor_hog.cpp  detector.cpp  detector.h  detector_bgsubtractor.cpp  detector_depthtouch.cpp  detector_hog.cpp  detector_lightSpots.cpp  detector_lightSpots.h  (+23 more)
