#man_MANS = \
#    blobserver.1
#
#EXTRA_DIST = $(man_MANS) \
#    man-blobserver.h2m
#
#MAINTAINERCLEANFILES = $(man_MANS)
#
## The man pages depend on the --help strings and the version number.
#common_mandeps = $(top_srcdir)/configure.ac
#
## Depend on the source, not the binary; we don't need to regenerate the
## binary when any source file changes, only the main one.
## Use -o so that the `missing' program can infer the output file.
#
#blobserver.1: $(top_srcdir)/src/blobserver.cpp $(common_mandeps) $(top_srcdir)/man/man-blobserver.h2m
#	$(HELP2MAN) --include=man-blobserver.h2m --name="blobserver" --no-info $(top_builddir)/src/blobserver -o $@

