noinst_HEADERS = \
    $(top_srcdir)/ext/libfidtrack/default_trees.h \
    $(top_srcdir)/ext/libfidtrack/dump_graph.h \
    $(top_srcdir)/ext/libfidtrack/fidtrack120.h \
    $(top_srcdir)/ext/libfidtrack/fidtrackX.h \
    $(top_srcdir)/ext/libfidtrack/floatpoint.h \
    $(top_srcdir)/ext/libfidtrack/segment.h \
    $(top_srcdir)/ext/libfidtrack/threshold.h \
    $(top_srcdir)/ext/libfidtrack/tiled_bernsen_threshold.h \
    $(top_srcdir)/ext/libfidtrack/topologysearch.h \
    $(top_srcdir)/ext/libfidtrack/treeidmap.h
